--- a/content/BK.ipynb
+++ b/content/BK.ipynb
@@ -9,6 +9,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports for JupyterLite\n",
+    "try:\n",
+    "    import piplite\n",
+    "    await piplite.install(['requests', 'json', 'pandas'])\n",
+    "except ImportError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
