--- a/content/BK_2.ipynb
+++ b/content/BK_2.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import pandas as pd\n",
     "from pyodide.ffi import to_js\n",
     "from IPython.display import JSON\n",
     "from js import Object, fetch\n",
