--- a/content/Fedlex.ipynb
+++ b/content/Fedlex.ipynb
@@ -163,8 +163,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": "## Aufbau der Daten\n\n### URI Schema\n\nDie eigentlichen Daten (nämlich Gesetzestexte) sind nach einem Schema mit URI versehen. Dieses [URI Schema]https://fedlex.data.admin.ch/de-CH/home/convention richtet sich nach dem System der [European Legislation Identifier (ELI)](https://eur-lex.europa.eu/eli-register/about.html).\n\nGrundsätzlich beginnen alle Daten mit folgender URI: http://fedlex.data.admin.ch/eli\n\n### Sammlungen\n\n* Bundesblatt ([Erläuterungen](https://www.fedlex.admin.ch/de/fga/explanation-fg))\n* Amtliche Sammlung ([Erläuterungen](https://www.fedlex.admin.ch/de/oc/explanations-oc))\n* Systematische Sammlung ([Erläuterungen](https://www.fedlex.admin.ch/de/cc/explanations-cc))",
+      "source": "## Aufbau der Daten\n\nDie Website https://fedlex.admin.ch basiert auf Daten aus dem RDF Triple Store. Diese Daten sind auch über das SPARQL Interface oder per SPARQL Query an den Endpunkt verfügbar. Informationen, die man aus den HTML Seiten von Fedlex rauslesen kann, sind also auch maschinenlesbar via SPARQL query verfügbar. Nachfolgend soll Schritt für Schritt das Datenmodell von Fedlex eingeführt werden und die entsprechenden SPARQL Queries aufgezeigt werden, um auf diese Daten maschinenlesbar zugreifen zu können.\n\n### Sammlungen\n\nDie Fedlex Daten sind in drei verschiedene Sammlungen gruppiert:\n\n* Bundesblatt ([Erläuterungen](https://www.fedlex.admin.ch/de/fga/explanation-fg))\n* Amtliche Sammlung ([Erläuterungen](https://www.fedlex.admin.ch/de/oc/explanations-oc))\n* Systematische Sammlung ([Erläuterungen](https://www.fedlex.admin.ch/de/cc/explanations-cc))\n\nFür juristisch wenig bewanderte Nutzerinnen und Nutzer sind entsprechende Erläuterungen zu den einzelnen Sammlungen verlinkt.",
+      "metadata": {
+        "tags": []
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "## Tutorial Bundesverfassung\n\nDer Einstieg in die Linked Data Welt von Fedlex geschieht über die URI eines Dokuments. Die URI ist dabei ein eindeutiger Identifier, der einer URL gleicht. Am einfachsten ist diese URI über das Webinterface von Fedlex herauszufinden: ![Fedlex_Webinterface](img/fedlex_search.jpg). Die URI versteckt sich hinter dem Ketten-Symbol direkt neben \"Alles einblenden\" ![SR101](img/sr101.jpg).",
       "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### URI Schema\n\nDie eigentlichen Daten (nämlich Gesetzestexte) sind nach einem Schema mit URI versehen. Dieses [URI Schema]https://fedlex.data.admin.ch/de-CH/home/convention richtet sich nach dem System der [European Legislation Identifier (ELI)](https://eur-lex.europa.eu/eli-register/about.html).\n\nGrundsätzlich beginnen alle Daten mit folgender URI: http://fedlex.data.admin.ch/eli",
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true,
+        "tags": []
+      }
     },
     {
       "cell_type": "markdown",
