--- a/content/Tutorial_1.0.ipynb
+++ b/content/Tutorial_1.0.ipynb
@@ -1,5 +1,6 @@
 {
   "metadata": {
+    "toc-autonumbering": false,
     "language_info": {
       "codemirror_mode": {
         "name": "python",
@@ -107,12 +108,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": "* Einleitung Linked Data\n* Einleitung Datenmodell SR (Metadaten)\n* Einleitung SPARQL (Sparql endpoint)\n* 1. Abfrage: Liste aller SR mit titel short titel, datum, SR Nummer, link\n* 2. Abfrage: Versionen der Bundesverfassung mit Datei\n* Welche SR werden durch das neueste AS geändert",
+      "source": "* [Linked Data](#linkedData)\n* [Die Daten auf Fedlex](#data)\n    * [Datenmodell jolux](#jolux)\n    * [Amtliche Sammlung](#AS)\n    * [Systematische Rechtssammlung](#SR)\n    * [Metadaten und Triples](#meta)\n    * [Abkürzungen](#abk)\n* [Das Datenmodell erforschen und abfragen mit SPARQL](#SPARQL_1)\n    * [SPARQL](#SPARQL)\n    * [Eigenschaften: URIs und Literals](#eigenschaften)\n    * [Expressions: Sprachversionen](#expressions)\n    * [Liste aller SR Einträge](#liste)\n    * [Consolidations: Versionen der SR Einträge](#consolidations)\n    * [Manifestations: Dateiformate und Datenzugriff](#manifestations)",
       "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "source": "## Linked Data",
+      "source": "## Linked Data <a class=\"anchor\" id=\"linkedData\"></a>",
       "metadata": {}
     },
     {
@@ -122,17 +123,17 @@
     },
     {
       "cell_type": "markdown",
-      "source": "## Daten und Datenmodell auf Fedlex",
+      "source": "## Die Daten auf Fedlex <a class=\"anchor\" id=\"data\"></a>",
       "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "source": "### Datenmodell jolux\n\nDie Datenbank von Fedlex besteht auf dem Datenmodel (auch Ontologie genannt) **jolux**, das uhrsprünglich aus Luxemburg kommt und inzwischen von der Schweiz und Luxemburg gemeinsam weiterentwickelt wird. In Linked Data definiert ein Datenmodell welche Art von Objekten es gibt, wie diese in Beziehung stehen können und mit welchem Vokabular (URIs) die Objekte und Beziehungen benannt werden.  \nWeitere Informationen über das Datenmodell jolux finden sie hier: https://fedlex.data.admin.ch/de-CH/home/models",
+      "source": "### Datenmodell jolux <a class=\"anchor\" id=\"jolux\"></a>\n\nDie Datenbank von Fedlex besteht auf dem Datenmodel (auch Ontologie genannt) **jolux**, das uhrsprünglich aus Luxemburg kommt und inzwischen von der Schweiz und Luxemburg gemeinsam weiterentwickelt wird. In Linked Data definiert ein Datenmodell welche Art von Objekten es gibt, wie diese in Beziehung stehen können und mit welchem Vokabular (URIs) die Objekte und Beziehungen benannt werden.  \nWeitere Informationen über das Datenmodell jolux finden sie hier: https://fedlex.data.admin.ch/de-CH/home/models",
       "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "source": "### Amtliche Sammlung",
+      "source": "### Amtliche Sammlung <a class=\"anchor\" id=\"AS\"></a>",
       "metadata": {}
     },
     {
@@ -142,7 +143,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Systematische Rechtssammlung",
+      "source": "### Systematische Rechtssammlung <a class=\"anchor\" id=\"SR\"></a>",
       "metadata": {
         "tags": []
       }
@@ -154,17 +155,17 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Metadaten und Triples",
+      "source": "### Metadaten und Triples <a class=\"anchor\" id=\"meta\"></a>",
       "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "source": "Mit welchen Linked Data Triples ein bestimmter Eintrag in der AS oder SR in der Datenbank beschrieben ist, lässt sich über den [Metadaten-Explorer](https://fedlex.data.admin.ch/de-CH/metadata) anzeigen. Dazu müssen die entsprechenden Linked Data URIs eingegeben werden.\n\nDie Linked Data URI, eines AS oder SR Eintrags, ist dabei analog zur Web-URL:\n* Web-URL: https://www.fedlex.admin.ch/eli/cc/1999/404\n* Linked Data URI: https://fedlex.data.admin.ch/eli/cc/1999/404\n\nDie URI eines AS oder SR Eintrags lässt sich auch über die Web-Darstellung finden in dem man auf das Ketten-Symbol direkt neben \"Alles einblenden\" klickt:\n<br><img src=\"img/sr101.jpg\" width=\"500px\">\n\n[In den Metadaten-Explorer eingegeben](https://fedlex.data.admin.ch/de-CH/metadata?value=https:%2F%2Ffedlex.data.admin.ch%2Feli%2Fcc%2F1999%2F404) zeigt die oben genannte URI die abgespeicherten Eigenschaften der Bundesverfassung.\n<br><img src=\"img/metadata.png\" width=\"500px\">",
+      "source": "Mit welchen Linked Data Triples ein bestimmter Eintrag in der AS oder SR in der Datenbank beschrieben ist, lässt sich über den [Metadaten-Explorer](https://fedlex.data.admin.ch/de-CH/metadata) anzeigen. Dazu müssen die entsprechenden Linked Data URIs eingegeben werden.\n\nDie Linked Data URI, eines AS oder SR Eintrags, ist dabei analog zur Web-URL:\n* Web-URL: https://www.fedlex.admin.ch/eli/cc/1999/404\n* Linked Data URI: https://fedlex.data.admin.ch/eli/cc/1999/404\n\nDie URI eines AS oder SR Eintrags lässt sich auch über die Web-Darstellung finden in dem man auf das Ketten-Symbol direkt neben \"Alles einblenden\" klickt:\n<br><img src=\"img/sr101.jpg\" width=\"800px\">\n\n[In den Metadaten-Explorer eingegeben](https://fedlex.data.admin.ch/de-CH/metadata?value=https:%2F%2Ffedlex.data.admin.ch%2Feli%2Fcc%2F1999%2F404) zeigt die oben genannte URI die abgespeicherten Eigenschaften der Bundesverfassung.\n<br><img src=\"img/metadata.png\" width=\"800px\">",
       "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "source": "### Abkürzungen",
+      "source": "### Abkürzungen <a class=\"anchor\" id=\"abk\"></a>",
       "metadata": {}
     },
     {
@@ -174,7 +175,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "## Das Datenmodell erforschen und die erste SPARQL Abfrage",
+      "source": "## Das Datenmodell erforschen und abfragen mit SPARQL <a class=\"anchor\" id=\"SPARQL_1\"></a>",
       "metadata": {
         "tags": []
       }
@@ -186,7 +187,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### SPARQL",
+      "source": "### SPARQL <a class=\"anchor\" id=\"SPARQL\"></a>",
       "metadata": {}
     },
     {
@@ -196,7 +197,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Eigenschaften der Bundesvefassung",
+      "source": "### Eigenschaften: URIs und Literals <a class=\"anchor\" id=\"eigenschaften\"></a>",
       "metadata": {}
     },
     {
@@ -206,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "source": "df = await query(\"\"\"\n\n# SELECT beschreibt welche Variablen zurückgegeben werden sollen.\n# Mit DISTINCT werden allfällige doppelte Ergebnisse aussortiert.\n\nSELECT DISTINCT ?prädikat ?objekt WHERE {\n    \n    # Die Aussage beginnt mit der URI der Bundesverfassung als Subjekt, setzt das Prädikat und Objekt als Variablen und endet mit einem Punkt.\n    <https://fedlex.data.admin.ch/eli/cc/1999/404> ?prädikat ?objekt .\n} \n\n\"\"\", \"F\")\n\ndisplay_result(df)",
+      "source": "df = await query(\"\"\"\n\n# SELECT beschreibt welche Variablen zurückgegeben werden sollen.\n# Mit DISTINCT werden allfällige doppelte Ergebnisse aussortiert.\n\nSELECT DISTINCT ?Prädikat ?Objekt WHERE {\n    \n    # Die Aussage beginnt mit der URI der Bundesverfassung als Subjekt, setzt das Prädikat und Objekt als Variablen und endet mit einem Punkt.\n    <https://fedlex.data.admin.ch/eli/cc/1999/404> ?Prädikat ?Objekt .\n} \n\n\"\"\", \"F\")\n\ndisplay_result(df)",
       "metadata": {
         "trusted": true
       },
@@ -234,7 +235,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Expressions: Sprachversionen",
+      "source": "### Expressions: Sprachversionen <a class=\"anchor\" id=\"expressions\"></a>",
       "metadata": {}
     },
     {
@@ -267,7 +268,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Liste aller SR Einträge",
+      "source": "### Liste aller SR Einträge <a class=\"anchor\" id=\"liste\"></a>",
       "metadata": {}
     },
     {
@@ -300,7 +301,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Consolidations: Versionen der SR Einträge",
+      "source": "### Consolidations: Versionen der SR Einträge <a class=\"anchor\" id=\"consolidations\"></a>",
       "metadata": {}
     },
     {
@@ -343,7 +344,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": "### Manifestations: Dateiformate und Datenzugriff",
+      "source": "### Manifestations: Dateiformate und Datenzugriff <a class=\"anchor\" id=\"manifestations\"></a>",
       "metadata": {}
     },
     {
@@ -378,6 +379,32 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": "* Zitate\n* Änderungen",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
